force-app/main/default/objects/sked__Resource_Tag__c/sked__Resource_Tag__c.object-meta.xml
<CustomObject>
    <label>Resource Tag</label>
    <nameField>
        <displayFormat>RT-{0}</displayFormat>
        <label>ResourceTag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>