force-app/main/default/objects/sked__Resource_Tag__c/fields/sked__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>sked__Expiry_Date__c</fullName>
    <description>Date after which the resource will no longer be considered to have this &quot;Tag&quot; (where &quot;Tag&quot; may be a Certification)</description>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>