force-app/main/default/objects/sked__Resource_Tag__c/fields/sked__Tag__c.field-meta.xml
<CustomField>
    <fullName>sked__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>sked__Tag__c</referenceTo>
    <relationshipName>ResourceTags</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>