force-app/main/default/objects/sked__Resource_Tag__c/fields/sked_Expiry_Alert_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Expiry_Alert_Time__c</fullName>
    <label>Expiry Alert Time</label>
    <type>DateTime</type>
</CustomField>