force-app/main/default/objects/sked__Resource_Tag__c/fields/sked_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>