force-app/main/default/objects/sked__Resource_Tag__c/fields/sked_Expiry_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>sked_Expiry_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expiry Notification Sent</label>
    <type>Checkbox</type>
</CustomField>