force-app/main/default/objects/sked__Resource_Tag__c/fields/sked_Expiry_Notification_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>sked_Expiry_Notification_Sent_To__c</fullName>
    <formula>$Setup.sked_Admin_Setting__c.sked_Admin_Schedulers_Group_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Notification Sent To</label>
    <type>Text</type>
</CustomField>