force-app/main/default/objects/sked__Resource_Tag__c/fields/sked_Premium_Pay__c.field-meta.xml
<CustomField>
    <fullName>sked_Premium_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Eligible premium roles: 2RBC, 2RBC Sign-off, Apheresis Charge, Charge, Charge - 2RBC, Charge - Special Collections, Charge Mentor, Competent Driver, Drive Lead, Driver, Driver - DOT, Driver CDL A, Driver CDL B, Licensed Nurse, OJI, Special Collections Charge and Translator</inlineHelpText>
    <label>Premium Pay</label>
    <type>Checkbox</type>
</CustomField>