force-app/main/default/objects/sked__Resource_Tag__c/fields/sked_Restriction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Restriction_Start_Date__c</fullName>
    <label>Restriction Start Date</label>
    <type>Date</type>
</CustomField>