force-app/main/default/objects/sked__Resource_Tag__c/fields/sked_Role_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Role_Status__c</fullName>
    <label>Role Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>