force-app/main/default/objects/sked__Resource_Tag__c/fields/sked_Tag_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Tag_Type__c</fullName>
    <formula>TEXT(sked__Tag__r.sked__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag Type</label>
    <type>Text</type>
</CustomField>