force-app/main/default/objects/sked__Resource_Tag__c/recordTypes/sked_Gatekeeper.recordType-meta.xml
<RecordType>
    <fullName>sked_Gatekeeper</fullName>
    <active>true</active>
    <description>For Resource Tag records created by Gatekeeper</description>
    <label>Gatekeeper</label>
</RecordType>