force-app/main/default/objects/sked__Resource_Tag__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>For any Non-Gatekeeper resource tags</description>
    <label>Standard</label>
</RecordType>