force-app/main/default/objects/sked__Resource_Tag__c/validationRules/PremiumPayIsAppliedForRoleOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>PremiumPayIsAppliedForRoleOnly</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(sked__Tag__r.sked__Type__c, &#39;Role&#39;) 
&amp;&amp; sked_Premium_Pay__c == TRUE</errorConditionFormula>
    <errorMessage>Premium Pay is only applied for Role tag.</errorMessage>
</ValidationRule>