force-app/main/default/objects/sked__Resource_Tag__c/validationRules/StartDateMustBePopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateMustBePopulated</fullName>
    <active>true</active>
    <description>Start Date must be Populated</description>
    <errorConditionFormula>ISNULL(sked_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>sked_Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be populated</errorMessage>
</ValidationRule>