force-app/main/default/objects/sked__Resource_Tag__c/validationRules/StartExpiryDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>StartExpiryDateCheck</fullName>
    <active>false</active>
    <errorConditionFormula>sked_Start_Date__c &gt; sked_Expiry_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be after the Expiry Date</errorMessage>
</ValidationRule>